<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_color"
    tools:context=".presentation.auth.EntryFragment">


    <ImageView
        android:id="@+id/ivEntryLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_140"
        android:src="@drawable/entry_fragment_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEntryLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:fontFamily="@font/montserrat_semi_bold"
        android:letterSpacing="0.12"
        android:lineHeight="@dimen/lineheight_34"
        android:text="@string/cinemax"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivEntryLogo" />

    <TextView
        android:id="@+id/tvEntryDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:fontFamily="@font/montserrat_semi_bold"
        android:letterSpacing="0.12"
        android:lineHeight="@dimen/lineheight_17"
        android:text="@string/enter_your_registered_phone_number_to_sign_up"
        android:textAlignment="center"
        android:textColor="@color/text_color_grey"
        android:textSize="@dimen/textsize_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEntryLogo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/entrySignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_56"
        android:backgroundTint="@color/blue_accent"
        android:fontFamily="@font/montserrat_medium"
        android:letterSpacing="0.12"
        android:lineHeight="@dimen/lineheight_19_5"
        android:paddingVertical="@dimen/margin_16"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="@dimen/textsize_16sp"
        app:cornerRadius="@dimen/radius_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEntryDesc" />

    <TextView
        android:id="@+id/tvAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_28"
        android:layout_marginTop="@dimen/margin_30"
        android:fontFamily="@font/montserrat_medium"
        android:letterSpacing="0.10"
        android:text="@string/i_already_have_an_account"
        android:textColor="@color/text_color_grey"
        android:textSize="@dimen/textsize_16sp"
        app:layout_constraintStart_toStartOf="@id/entrySignUpButton"
        app:layout_constraintTop_toBottomOf="@id/entrySignUpButton"
        app:lineHeight="@dimen/lineheight_19_5" />

    <TextView
        android:id="@+id/tvLoginEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:fontFamily="@font/montserrat_semi_bold"
        android:letterSpacing="0.10"
        android:text="@string/login"
        android:textColor="@color/blue_accent"
        android:textSize="@dimen/textsize_16sp"
        android:layout_marginStart="@dimen/margin_4"
        app:layout_constraintStart_toEndOf="@id/tvAlreadyHaveAccount"
        app:layout_constraintTop_toBottomOf="@id/entrySignUpButton"
        app:lineHeight="@dimen/lineheight_19_5" />

    <View
        android:id="@+id/dividerOne"
        android:layout_width="@dimen/wh_68"
        android:layout_height="@dimen/wh_1"
        android:layout_marginTop="@dimen/margin_36"
        android:layout_marginEnd="@dimen/margin_8"
        android:background="@color/soft"
        android:elevation="@dimen/elevation_4"
        app:layout_constraintEnd_toStartOf="@id/tvOrSignUpWith"
        app:layout_constraintTop_toBottomOf="@id/tvAlreadyHaveAccount" />

    <TextView
        android:id="@+id/tvOrSignUpWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_28"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/or_sign_up_with"
        android:textColor="@color/text_color_grey"
        android:textSize="@dimen/textsize_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlreadyHaveAccount"
        app:lineHeight="@dimen/lineheight_17" />

    <View
        android:id="@+id/dividerSecond"
        android:layout_width="@dimen/wh_68"
        android:layout_height="@dimen/wh_1"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_36"
        android:background="@color/soft"
        android:elevation="@dimen/elevation_4"
        app:layout_constraintStart_toEndOf="@id/tvOrSignUpWith"
        app:layout_constraintTop_toBottomOf="@id/tvAlreadyHaveAccount" />

    <ImageView
        android:id="@+id/ivGoogleLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_36"
        android:src="@drawable/logo_google"
        app:layout_constraintEnd_toStartOf="@+id/ivFacebookLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOrSignUpWith" />

    <ImageView
        android:id="@+id/ivFacebookLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_36"
        android:src="@drawable/logo_facebook"
        app:layout_constraintStart_toEndOf="@+id/ivGoogleLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOrSignUpWith"


        />


</androidx.constraintlayout.widget.ConstraintLayout>