<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_color"
    tools:context=".presentation.auth.ResetPasswordFragment">

    <ImageView
        android:id="@+id/btnBackResetPasswordScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_26"
        android:layout_marginTop="@dimen/margin_8"
        android:src="@drawable/ic_btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_36"
        android:fontFamily="@font/montserrat_medium"
        android:letterSpacing="0.1"
        android:lineHeight="@dimen/lineheight_34"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBackResetPasswordScreen" />

    <TextView
        android:id="@+id/tvRecoverAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/recover_your_account_password"
        android:textColor="@color/text_color_grey"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="@dimen/textsize_14sp"
        android:lineHeight="@dimen/lineheight_17"
        android:textAlignment="center"
        android:letterSpacing="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResetPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmailAddressResetScreen"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_26"
        android:layout_marginTop="@dimen/margin_50"
        android:textColorHint="@color/white_grey"
        app:boxCornerRadiusBottomEnd="@dimen/radius_24"
        app:boxCornerRadiusBottomStart="@dimen/radius_24"
        app:boxCornerRadiusTopEnd="@dimen/radius_24"
        app:boxCornerRadiusTopStart="@dimen/radius_24"
        app:boxStrokeColor="@color/text_input_layout_stroke"
        app:boxStrokeWidth="@dimen/wh_1"
        app:expandedHintEnabled="false"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRecoverAccount">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:autofillHints="emailAddress"
            android:hint="@string/email_address"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/textsize_14sp"
            android:lineHeight="@dimen/lineheight_17"
            android:letterSpacing="0.1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNextResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_26"
        android:layout_marginTop="@dimen/margin_36"
        android:backgroundTint="@color/blue_accent"
        android:fontFamily="@font/montserrat_medium"
        android:letterSpacing="0.1"
        android:lineHeight="@dimen/lineheight_19_5"
        android:paddingVertical="@dimen/margin_16"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_16sp"
        app:cornerRadius="@dimen/radius_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmailAddressResetScreen" />


</androidx.constraintlayout.widget.ConstraintLayout>